# elm-theme-viewer

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  README  TODO  common.h  configure.ac  gui.c  gui.h  log.h  main.c  theme.c  theme.h  widget.c  widget.h
data/: Makefile.am  layout.edc
data/images/: Makefile.am
data/themes/: Makefile.am  layout.edc  layout_mobile.edc
packaging/: elm-theme-viewer.spec
src/: Makefile.am  common.h  gui.c  gui.h  gui_mobile.c  gui_mobile.h  log.c  log.h  main.c  theme.c  theme.h  widget.c  widget.h
